--- a/src/scss/types/simple.scss
+++ b/src/scss/types/simple.scss
@@ -37,11 +37,8 @@
       align-items: center;
     }
   }
-  .TransitionC {
-    transition: background-color 0.3s; //d
-  }
   .label {
-    font-size: $label-font-size; //d
+    font-size: $label-font-size; 
     > .left {
       margin-left: 7px;
       margin-right: 7px;
